--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=PurchaseDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/first_db
+spring.datasource.username=purchase
+spring.datasource.password=Nthvbyfnjh2015
+spring.datasource.driver-class-name=org.postgresql.Driver
